# NeuralNetwork

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.MD  Layer  Makefile  README.MD  README.md  conf.h  example.cpp  main.cpp  tests.cpp
.github/: tests.sh
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  cmake.yml  codeql.yml  release.yml  tests.yaml
DSL/: CMakeLists.txt  dsl.h  main.cpp
DSL/DSL/: CMakeLists.txt  dsl.h
DSL/DSL/Essentials/Vector/: vector.h  vector.hpp
DSL/DSL/Math/ModuloZ/: ModuloZ.h  ModuloZ.hpp
DSL/DSL/Vector/: vector.c  vector.h  vector.hpp
DSL/Essentials/Vector/: vector.h  vector.hpp
DSL/Examples/ModuloZ/: moduloz.h
DSL/Examples/Vector/: vector.h  vector_example.h
DSL/Math/ModuloZ/: ModuloZ.h  ModuloZ.hpp
DSL/NeuralNetwork/: Activation.h  Layer.h  Layer.hpp  Loss.h  NeuralNetwork.h
DSL/Tests/: CMakeLists.txt  test.c  test.cpp  vector_example.h  vector_tests.h
DSL/Tests/ModuloZ/: moduloz.h
DSL/Tests/Vector/: vector.h
Examples/: CMakeLists.txt  NeuralNetwork.h  example.h  main.cpp
Examples/Essentials/Vector/: vector.h
Examples/NeuralNetwork/: neuralnetwork.h
NeuralNetwork/: CMakeLists.txt  Exampe.h  Layer.hpp  NeuralNetwork.h  Node.h  Node.hpp  UnitTests.h  main.cpp
NeuralNetwork/Activation/: Activation.h
NeuralNetwork/Layer/: Layer.hpp
Tests/: CMakeLists.txt  conf.h
Tests/Essentials/Vector/: vector.h
Tests/Integration/: integration_tests.h
Tests/Performance/: performance_tests.h
Tests/Regression/: regression_tests.h
Tests/Security/: security_tests.h
Tests/Soak/: soak_tests.h
Tests/Stress/: stress_tests.h
Tests/Unit/: unit_tests.h
Tests/Unit/Essentials/Vector/: vector.h
Tests/UnitTests/: Assert.h  CMakeLists.txt  UnitTests.h  main.cpp
UnitTests/Essentials/Vector/: vector.h
docs/: Vector.MD
docs/Math/: ModuloZ.MD
